--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 						<div class="col">
 							<img src="./assets/images/humidity.png">
 							<div>
-								<p class="humidity">60%</p>
+								<p class="humidity"></p>
 								<p>Humidity</p>
 							</div>
 						</div>
 						<div class="col">
 							<img src="./assets/images/wind.png">
-							<div>
-								<p class="wind">12 km/h</p>
+							<div class="wind__content">
+								<p class="wind"></p>
 								<p>Wind Speed</p>
 							</div>
 						</div>
